refactor list access to use getFirst instead of get(0) in InternalFinanceDigestServiceTest